--- a/mcp_tools/composer.json
+++ b/mcp_tools/composer.json
@@ -17,6 +17,7 @@
   "require": {
     "php": ">=8.3",
     "drupal/core": "^10.3 || ^11",
-    "drupal/tool": "^1.0@alpha"
+    "drupal/tool": "^1.0@alpha",
+    "mcp/sdk": "^0.2.2"
   }
 }
