--- a/modules/mcp_tools_analysis/mcp_tools_analysis.services.yml
+++ b/modules/mcp_tools_analysis/mcp_tools_analysis.services.yml
@@ -6,3 +6,5 @@ services:
       - '@database'
       - '@http_client'
       - '@config.factory'
+      - '@module_handler'
+      - '@request_stack'
