--- a/modules/mcp_tools_recipes/mcp_tools_recipes.services.yml
+++ b/modules/mcp_tools_recipes/mcp_tools_recipes.services.yml
@@ -1,4 +1,8 @@
 services:
+  logger.channel.mcp_tools_recipes:
+    parent: logger.channel_base
+    arguments: ['mcp_tools_recipes']
+
   mcp_tools_recipes.recipes:
     class: Drupal\mcp_tools_recipes\Service\RecipesService
     arguments:
@@ -8,3 +12,6 @@ services:
       - '%app.root%'
       - '@mcp_tools.access_manager'
       - '@mcp_tools.audit_logger'
+      - '@state'
+      - '@current_user'
+      - '@logger.channel.mcp_tools_recipes'
