--- a/modules/mcp_tools_remote/config/install/mcp_tools_remote.settings.yml
+++ b/modules/mcp_tools_remote/config/install/mcp_tools_remote.settings.yml
@@ -1,7 +1,9 @@
 enabled: false
 uid: 1
+# Optional allowlist of client IPs/CIDRs that may access the HTTP endpoint.
+# When empty, any IP is allowed (not recommended for public networks).
+allowed_ips: []
 server_name: 'Drupal MCP Tools'
 server_version: '1.0.0'
 pagination_limit: 50
 include_all_tools: false
-
