--- a/mcp_tools.services.yml
+++ b/mcp_tools.services.yml
@@ -23,6 +23,10 @@ services:
       - '@config.factory'
       - '@current_user'
       - '@logger.factory'
+      - '@mcp_tools.access_manager'
+      - '@request_stack'
+      - '@mcp_tools.tool_call_context'
+      - '@mcp_tools.rate_limiter'
 
   # Tool Call Context (used for MCP-scoped side effects like config tracking).
   mcp_tools.tool_call_context:
