#3575317 Use getCurrentTime() to avoid frozen REQUEST_TIME in server mode.

--- a/modules/mcp_tools_batch/mcp_tools_batch.services.yml
+++ b/modules/mcp_tools_batch/mcp_tools_batch.services.yml
@@ -8,3 +8,4 @@ services:
       - '@module_handler'
       - '@mcp_tools.access_manager'
       - '@mcp_tools.audit_logger'
+      - '@datetime.time'
